# veritas

./: BUILD.bazel  Makefile  WORKSPACE  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-veritas
pkg/mod/cache/download/github.com/creack/pty/@v/: list
pkg/mod/cache/download/github.com/eryljoy/veritas/src/@v/: list  v0.0.0-20220830175921-ae18eadffb83.info  v0.0.0-20220830175921-ae18eadffb83.ziphash
pkg/mod/cache/download/github.com/rogpeppe/go-internal/@v/: list
pkg/mod/cache/download/github.com/stretchr/testify/@v/: list
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/creack/: pty@v1.1.18  pty@v1.1.7  pty@v1.1.9
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/davecgh/: go-spew@v1.1.0  go-spew@v1.1.1
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/eryljoy/veritas/: src@v0.0.0-20220830175921-ae18eadffb83
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/kr/: pretty@v0.1.0  pretty@v0.2.1  pretty@v0.3.0  pty@v1.1.1  pty@v1.1.8  text@v0.1.0  text@v0.2.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/pkg/: diff@v0.0.0-20210226163009-20ebb0f2a09e
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/pmezard/: go-difflib@v1.0.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/rogpeppe/: go-internal@v1.6.1  go-internal@v1.9.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/stretchr/: objx@v0.1.0  objx@v0.4.0  testify@v1.7.1  testify@v1.7.2  testify@v1.7.3  testify@v1.7.4  testify@v1.7.5  testify@v1.8.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/: sys@v0.0.0-20220829200755-d48e67d00261
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/gopkg.in/: check.v1@v0.0.0-20161208181325-20d25e280405  check.v1@v1.0.0-20180628173108-788fd7840127  check.v1@v1.0.0-20201130134442-10cb98267c6c  errgo.v2@v2.1.0  yaml.v3@v3.0.0-20200313102051-9f266ea9e77c  yaml.v3@v3.0.1
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x047/: 287  290  291  293  294  295  296
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x047/296.p/: 218  244
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x047/297.p/: 15  70
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/184.p/: 192  193
pkg/mod/github.com/eryljoy/veritas/src@v0.0.0-20220830175921-ae18eadffb83/: BUILD.bazel
pkg/mod/github.com/eryljoy/veritas/src@v0.0.0-20220830175921-ae18eadffb83/janus/cmd/: cmd
pkg/mod/github.com/eryljoy/veritas/src@v0.0.0-20220830175921-ae18eadffb83/janus/internal/: BUILD.bazel  service_test.go
pkg/mod/github.com/eryljoy/veritas/src@v0.0.0-20220830175921-ae18eadffb83/janus/internal/constants/: BUILD.bazel
pkg/mod/github.com/eryljoy/veritas/src@v0.0.0-20220830175921-ae18eadffb83/janus/pkg/scoper/: scoper.go
pkg/sumdb/sum.golang.org/: latest
src/: go.bzl  go.mod
src/janus/: BUILD.bazel  main.go  mod
src/janus/cmd/: BUILD.bazel  main.go  main_test.go
src/janus/internal/: service.go
src/janus/internal/constants/: regexes.go
src/janus/internal/scoper/: BUILD.bazel  scoper.go
src/janus/internal/scoper/name_regrets/: BUILD.bazel  name_regex.go
src/janus/pkg/scoper/: BUILD.bazel
src/scoper/cmd/: BUILD.bazel  main.go
src/scoper/internal/: BUILD.bazel  service.go  service_test.go
src/scoper/internal/constants/: regexes.go
src/scoper/pkg/indenter/: indenter.go  indenter_test.go
src/scoper/pkg/indenter/examples/: main.c
